feat: add routes event + planet
