# api/db/model/defence.go
@@ -3,6 +3,7 @@ package model
 import (
 	"time"
 
+	"github.com/Spacelocust/for-democracy/db/enum"
 	"gorm.io/gorm"
 )
 
@@ -11,8 +12,9 @@ type Defence struct {
 	Health          int `gorm:"not null"`
 	StartAt         time.Time
 	EndAt           time.Time
-	EnnemyHealth    int `gorm:"not null"`
-	EnnemyMaxHealth int `gorm:"not null"`
-	HelldiversID    int `gorm:"not null;unique"`
+	EnnemyFaction   enum.Faction `gorm:"not null;type:faction"`
+	EnnemyHealth    int          `gorm:"not null"`
+	EnnemyMaxHealth int          `gorm:"not null"`
+	HelldiversID    int          `gorm:"not null;unique"`
 	PlanetID        uint
 }
